Streams: hang in start/stop with empty changestream when checkpointing enabled

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • None
    • Affects Version/s: None
    • Component/s: None
    • Atlas Streams
    • Fully Compatible
    • ALL
    • Sprint 31
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Adding the following test in checkpoint.js can repro it:

      function smokeTestEmptyChangestreamStartStop()

      {     const input = generateInput(0);     let test =         new TestHelper(input, [] /* pipeline */, null /* default interval */, 'changestream');     test.run();     test.stop(); }

            Assignee:
            Matthew Normyle
            Reporter:
            Matthew Normyle
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: