SERVER-80668: Streams: use operationTime from ping response for first changestream checkpoint

GitOrigin-RevId: 2855fba0c5bbdc313d3497b401c3f8ceead8423f